Bugfix: mainpage title becomming to small on tablet screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,15 +16,7 @@ html {
 .custom-title {
   font-family: 'Pacifico', cursive;
   font-size: 4vw;
-  padding-bottom: 12px;
-}
-
-@media screen and (max-width: 600px) {
-  .custom-subtitle {
-    font-family: 'Poppins', sans-serif;
-    font-size: 7.5vw;
-    padding-bottom: 22px;
-  }
+  padding-bottom: 50px;
 }
 
 .subtext {
